# caregap-map

./: .env.example  .gitignore  DECISIONS.md  DEMO_SCRIPT.md  DEPLOYMENT.md  PROJECT_SPEC.md  README.md  TASKS.md  app.py  app.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml
config/: codex_icu_output_schema.json
data/samples/: facilities_sample.csv
docs/: CODEX_EXTRACTION.md  MLFLOW_EVALUATION.md  SUBMISSION.md
evals/: EVALUATION_STATUS.md  NAYUN_REVIEW_SUMMARY.md  README.md  icu_review_template.csv
scripts/: audit_headline_metrics.py  audit_trust_boundary.py  build_eval_sample.py  build_processed_data.py  evaluate_labels.py  find_demo_facilities.py  profile_data.py  register_tables.sql  run_codex_extraction.py  run_llm_extraction.py  run_mlflow_evaluation.py
src/caregap_map/: __init__.py  aggregation.py  audit.py  cleaning.py  codex_extraction.py  config.py  data_access.py  demo_candidates.py  (+15 more)
tests/: conftest.py  test_aggregation.py  test_app_smoke.py  test_audit.py  test_bed_count.py  test_calibration.py  test_cleaning.py  test_codex_extraction.py  test_data_access.py  test_delta_review_store.py  test_demo_candidates.py  test_display_labels.py  test_env_and_cost.py  test_evaluation.py  test_evidence.py  test_geography.py  test_llm_extraction.py  test_mlflow_evaluation.py  test_persistence.py  test_planning.py  test_policy_v2.py  test_provenance.py  test_regional_guidance.py  test_sample_end_to_end.py  test_scenarios.py  test_scoring.py  test_subtypes.py  test_ui_components.py  test_ui_state.py  test_workflow.py
