[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "caregap-map"
version = "0.1.0"
description = "CareGap Map - trust layer for ICU coverage planning in India (Databricks Data Legend, Medical Desert Planner)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.1",
    "pyarrow>=14",
    "streamlit>=1.35",
    "plotly>=5.20",
    "pydantic>=2.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.4",
]
llm = [
    "openai>=1.40",
]
databricks = [
    "databricks-sql-connector>=3.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
line-length = 110
target-version = "py311"
src = ["src", "scripts", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = [
    "SIM108",  # ternary is not always clearer
]
